--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,3 +23,193 @@
   year={2015},
   organization={Technical Report http://conferences. sigcomm. org/sigcomm/2015/pdf/reviews/226pr. pdf. Department of Computer Science, Boston University}
 }
+
+@article{allman2008ought,
+  title={What ought a program committee to do?},
+  author={Allman, Mark},
+  journal={WOWCS},
+  volume={8},
+  pages={1--5},
+  year={2008}
+}
+
+@inproceedings{aycock2011human,
+  title={Human subjects, agents, or bots: Current issues in ethics and computer security research},
+  author={Aycock, John and Buchanan, Elizabeth and Dexter, Scott and Dittrich, David},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={138--145},
+  year={2011},
+  organization={Springer}
+}
+
+@misc{beauchamp2009autonomy,
+  title={Autonomy and consent. W: Miller F., Wertheimer A.(red.). The ethics of consent: theory and practice},
+  author={Beauchamp, T},
+  year={2009},
+  publisher={Oxford University Press, New York}
+}
+
+@article{davis1991thinking,
+  title={Thinking like an engineer: The place of a code of ethics in the practice of a profession},
+  author={Davis, Michael},
+  journal={Philosophy \& Public Affairs},
+  pages={150--167},
+  year={1991},
+  publisher={JSTOR}
+}
+
+@article{garfinkel2008irbs,
+  title={IRBs and security research: myths, facts and mission creep},
+  author={Garfinkel, Simson L},
+  year={2008}
+}
+
+@book{guiora2017cybersecurity,
+  title={Cybersecurity: Geopolitics, Law, and Policy},
+  author={Guiora, Amos N},
+  year={2017},
+  publisher={Routledge}
+}
+
+@book{hansson2013ethics,
+  title={The ethics of risk: Ethical analysis in an uncertain world},
+  author={Hansson, S},
+  year={2013},
+  publisher={Springer}
+}
+
+ @article{Hermansson_2010, title={Towards a fair procedure for risk management}, volume={13}, ISSN={1466-4461}, url={http://dx.doi.org/10.1080/13669870903305903}, DOI={10.1080/13669870903305903}, number={4}, journal={Journal of Risk Research}, publisher={Informa UK Limited}, author={Hermansson, Hélène}, year={2010}, month={Jun}, pages={501–515}}
+
+@misc{ienca2018cambridge,
+author = "Ienca, Marcello, and Effy Vayena",
+year =  2018,
+title = "Cambridge Analytica and Online Manipulation.",
+publisher = "Scientific American Blog Network",
+month =  mar,
+url = "https://blogs.scientificamerican.com/observations/cambridge-analytica-and-online-manipulation/",
+}
+
+@inproceedings{johnson2011computer,
+  title={Computer security research with human subjects: risks, benefits and informed consent},
+  author={Johnson, Maritza L and Bellovin, Steven M and Keromytis, Angelos D},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={131--137},
+  year={2011},
+  organization={Springer}
+}
+
+@article{landwehr2010drawing,
+  title={Drawing the line},
+  author={Landwehr, Carl E},
+  journal={IEEE Security \& Privacy},
+  volume={8},
+  number={1},
+  pages={3--4},
+  year={2010},
+  publisher={IEEE}
+}
+
+@misc{livitt2016prelim,
+author = "Livitt, Carl D."
+year =  2016,
+title = "Preliminary Expert Report of Carl D. Livitt 0:16-cv-03002-DWF-JSM",
+url= "https://medsec.com/stj_expert_witness_report.pdf.",
+}
+
+@article{macnish2012unblinking,
+  title={Unblinking eyes: the ethics of automating surveillance},
+  author={Macnish, Kevin},
+  journal={Ethics and information technology},
+  volume={14},
+  number={2},
+  pages={151--167},
+  year={2012},
+  publisher={Springer}
+}
+
+@book{manson2007rethinking,
+  title={Rethinking informed consent in bioethics},
+  author={Manson, Neil C and O'Neill, Onora},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
+@article{meyer2014everything,
+  title={Everything we know about Facebook’s secret mood manipulation experiment},
+  author={Meyer, Robinson},
+  journal={The Atlantic},
+  volume={28},
+  year={2014}
+}
+
+@inproceedings{moore2011ethical,
+  title={Ethical dilemmas in take-down research},
+  author={Moore, Tyler and Clayton, Richard},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={154--168},
+  year={2011},
+  organization={Springer}
+}
+
+@article{nichols16jude,
+author = "Nichols, Shaun",
+year = 2016,
+title = "St Jude Sues Short-Selling MedSec over Pacemaker ‘Hack’ Report.",
+journal = "The Register"
+month = September,
+url = "https://www.theregister.co.uk/2016/09/07/st_jude_sues_over_hacking_claim/"}
+
+
+
+@inproceedings{robinson2011ethical,
+  title={Ethical issues in e-voting security analysis},
+  author={Robinson, David G and Halderman, J Alex},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={119--130},
+  year={2011},
+  organization={Springer}
+}
+
+@inproceedings{soghoian2011enforced,
+  title={Enforced community standards for research on users of the Tor anonymity network},
+  author={Soghoian, Christopher},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={146--153},
+  year={2011},
+  organization={Springer}
+}
+
+@article{spring16medsec,
+author = "Spring, Tom",
+year = 2016,
+title = "Researchers: MedSec, Muddy Waters Set Bad Precedent With St. Jude Medical Short",
+journal = "Threatpost",
+month = aug,
+url = "https://threatpost.com/researchers-medsec-muddy-waters-set-bad-precedent-with-st-jude-medical-short/120266/"
+}
+
+@article{spring17fda,
+author = "Spring, Tom",
+year = 2017,
+title = "FDA Recalls 465K Pacemakers Tied to MedSec Research",
+journal = "Threatpost",
+month = aug,
+url = "https://threatpost.com/fda-recalls-465k-pacemakers-tied-to-medsec-research/127750/"
+}
+
+@incollection{turnbull15ethics,
+author = "Turnbull, John",
+year = 2015,
+title = “Ethics and Employability”,
+booktitle= "Engineering in Society: Beyond the Technical",
+editor = "Rob Lawlor",
+edition  = "2nd",
+publisher = "University of Leeds",
+}
+
+@misc{weigelt16jude,
+author = "Weigelt, J.C."
+year = 2016,
+title = "St. Jude Medical Brings Legal Action Against Muddy Waters and MedSec.",
+month = September,
+url = "http://media.sjm.com/newsroom/news-releases/news-releases-details/2016/St-Jude-Medical-Brings-Legal-Action-Against-Muddy-Waters-and-MedSec/default.aspx"
