fix references in text.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -213,3 +213,15 @@ year = 2016,
 title = "St. Jude Medical Brings Legal Action Against Muddy Waters and MedSec.",
 month = September,
 url = "http://media.sjm.com/newsroom/news-releases/news-releases-details/2016/St-Jude-Medical-Brings-Legal-Action-Against-Muddy-Waters-and-MedSec/default.aspx"
+}
+
+@article{hermansson2010towards,
+  title={Towards a fair procedure for risk management},
+  author={Hermansson, H{\'e}l{\`e}ne},
+  journal={Journal of Risk Research},
+  volume={13},
+  number={4},
+  pages={501--515},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
