fixing some syntax errors

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -110,7 +110,7 @@ url = "https://blogs.scientificamerican.com/observations/cambridge-analytica-and
 }
 
 @misc{livitt2016prelim,
-author = "Livitt, Carl D."
+author = "Livitt, Carl D.",
 year =  2016,
 title = "Preliminary Expert Report of Carl D. Livitt 0:16-cv-03002-DWF-JSM",
 url= "https://medsec.com/stj_expert_witness_report.pdf.",
@@ -155,7 +155,7 @@ url= "https://medsec.com/stj_expert_witness_report.pdf.",
 author = "Nichols, Shaun",
 year = 2016,
 title = "St Jude Sues Short-Selling MedSec over Pacemaker ‘Hack’ Report.",
-journal = "The Register"
+journal = "The Register",
 month = September,
 url = "https://www.theregister.co.uk/2016/09/07/st_jude_sues_over_hacking_claim/"}
 
@@ -200,7 +200,7 @@ url = "https://threatpost.com/fda-recalls-465k-pacemakers-tied-to-medsec-researc
 @incollection{turnbull15ethics,
 author = "Turnbull, John",
 year = 2015,
-title = “Ethics and Employability”,
+title = "Ethics and Employability",
 booktitle= "Engineering in Society: Beyond the Technical",
 editor = "Rob Lawlor",
 edition  = "2nd",
@@ -208,7 +208,7 @@ publisher = "University of Leeds",
 }
 
 @misc{weigelt16jude,
-author = "Weigelt, J.C."
+author = "Weigelt, J.C.",
 year = 2016,
 title = "St. Jude Medical Brings Legal Action Against Muddy Waters and MedSec.",
 month = September,
