--- a/template.tex
+++ b/template.tex
@@ -85,7 +85,6 @@ We do not write this to condemn the authors or the IRBs that allowed these exper
 \label{sec:academicdev}
 As noted in the introduction, developments in cyber security methodology, tactics and techniques occur at both the level of academic research and in research at a corporate and government (i.e. practitioner) level.  This is not to say that academic institutions do not practice cyber security: they do. However, at the stage of practice, the academic institution becomes indistinguishable from the corporate or government practice of cyber security. While many of these ethical issues will invariably overlap, each of these also raises its own concerns. We present a summary of those issues experienced in our own (academic) work below. In Part II we list ethical issues pertaining to practitioner-led research.
 
-\begin{itemize}
 \subsubsection{Informed consent}:
 The ability to and act of gaining informed consent from those who are affected by the research.  This is seen starkly in the above case of testing censorship systems. It may also be a factor when the system is neither owned nor operated by the researcher. In such cases, should permission be required for the system to be tested?
 
@@ -115,14 +114,13 @@ If vulnerabilities are found and not patched immediately, this could have an imp
 \subsubsection{Hiding code in firmware using leaked vulnerabilities}:
 Drawing back to the Encore case above, should leaked vulnerabilities be used to install code on systems? In some cases, the researcher must act like a hacker in order to fully test the system, and this will include using vulnerabilities. How far is it reasonable for the researcher to go in carrying this out, though?
 
-\item\emph{Recognizing ethical problems}:
+\subsubsection{Recognizing ethical problems}:
 While the authors of the Encore research did recognize and attempt to seek assistance from more than one IRB, this is not always the case. In many instances researchers do not even recognize the potential for an ethical issue to arise. In discussing ethically-questionable research on the Tor network carried out in 2008, Christopher Soghoian notes that the researchers “simply did not see the ethical or legal issues associated with their data gathering” (2012, 146), although he goes on to quote one of the researchers as saying that they had been “advised that [seeing IRB guidance or approval] wasn’t necessary,” suggesting that they had at least started to investigate the possibility of ethical issues arising (Soghoian 2012, 147). Following the presentation of the research in 2008, the University of Colorado announced that the researchers had not violated university ethics policies as “by any reasonable standard, the work in question was not classifiable as human subject research” (quoted in Soghoian 2012).
 
 \subsubsection{Competence of IRBs}:
 Ultimately, one of the key concerns of this paper is that IRBs tend to consist of experts in ethics rather than experts in computer science, or vice versa.  In our experience, which is echoed in the above case study, it is difficult to find an IRB which combines both sets of expertise. Nor are we the first to point this out, a similar point has been made repeatedly over the last decade: in 2008 by Simson Garfinkel (2008) and Mark Allman (2008), in 2010 by Carl Landwehr (Landwehr 2010) and in 2011 by Johnson et al (2012) and Aycock et al (2012, 138–39). Despite being raised a number of times, the problem persists as many computer science researchers have received only elementary education in ethics, some of which might have included research ethics, while many ethicists have very little understanding of computer science research methods. This is not to say that there is no cross-over as there clearly is, but this is not as wide-spread as it needs to be in order to effectively oversee the developments with which we are concerned in this paper.
 
 The result is that, as noted in the introductory case study, IRBs in computer science tend to react to well-recognized ethical and legal problems such as personally identifiable information. Less concern is directed towards the potential harm that may arise to individual research participants, particularly when they have not given or are unable to give informed consent to participate in the research. Standardly this is only permissible in cases of observational research in which the risk of harm is deemed (by an independent IRB) to be low. Cybersecurity research is often more interactive than mere observational research and the potential for harm may be considerable.
-\end{itemize}
 
 \subsection{Summary}
 \label{sec:summary}
